--- a/CBFormController/Classes/CBCellSet2/CBCellSet2Date.xib
+++ b/CBFormController/Classes/CBCellSet2/CBCellSet2Date.xib
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="210" id="bIv-bJ-qLx" customClass="CBCellSet2Date">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="250" id="bIv-bJ-qLx" customClass="CBCellSet2Date">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bIv-bJ-qLx" id="MLh-jr-cCd">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="209"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="249"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Received" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTl-mA-CWX" userLabel="Title Label">
@@ -43,6 +44,14 @@
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tTS-qV-Ynh">
+                        <rect key="frame" x="103" y="213" width="114" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="114" id="4fY-qg-Rza"/>
+                            <constraint firstAttribute="height" constant="30" id="s3P-Rp-qeK"/>
+                        </constraints>
+                        <state key="normal" title="Clear Date"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="pp5-E6-PhA" firstAttribute="leading" secondItem="MLh-jr-cCd" secondAttribute="leading" id="2fC-lf-TQC"/>
@@ -50,6 +59,8 @@
                     <constraint firstAttribute="trailing" secondItem="pp5-E6-PhA" secondAttribute="trailing" id="6ES-sD-aML"/>
                     <constraint firstItem="I7t-9R-QUN" firstAttribute="top" secondItem="MLh-jr-cCd" secondAttribute="top" constant="11" id="A1z-na-hcl"/>
                     <constraint firstAttribute="trailing" secondItem="I7t-9R-QUN" secondAttribute="trailing" constant="14" id="DBD-PU-r4Y"/>
+                    <constraint firstItem="tTS-qV-Ynh" firstAttribute="centerX" secondItem="MLh-jr-cCd" secondAttribute="centerX" id="JbM-oU-Geq"/>
+                    <constraint firstItem="tTS-qV-Ynh" firstAttribute="top" secondItem="pp5-E6-PhA" secondAttribute="bottom" constant="6" id="UDy-MK-tIe"/>
                     <constraint firstItem="mTl-mA-CWX" firstAttribute="leading" secondItem="MLh-jr-cCd" secondAttribute="leading" constant="14" id="VX7-fi-ATY"/>
                     <constraint firstItem="mTl-mA-CWX" firstAttribute="top" secondItem="MLh-jr-cCd" secondAttribute="top" constant="6" id="dW4-8S-Kql"/>
                     <constraint firstItem="I7t-9R-QUN" firstAttribute="width" secondItem="mTl-mA-CWX" secondAttribute="width" id="fz9-Ws-YzS"/>
@@ -57,10 +68,12 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="clearButton" destination="tTS-qV-Ynh" id="zT1-bf-oUu"/>
                 <outlet property="dateField" destination="I7t-9R-QUN" id="L4p-OC-8jL"/>
                 <outlet property="datePicker" destination="pp5-E6-PhA" id="LZ3-xz-i7w"/>
                 <outlet property="titleLabel" destination="mTl-mA-CWX" id="Z9o-mm-bq1"/>
             </connections>
+            <point key="canvasLocation" x="34" y="74"/>
         </tableViewCell>
     </objects>
 </document>
